# GeologyWizard

./: .gitignore  AGENTS.md  Makefile  README.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: JobList.tsx  (+2 more)
docs/: architecture.md  tectonics_bible.md
scripts/: dev.sh
services/engine/: README.md  pyproject.toml
services/engine/geologic_wizard_engine/: api.py  job_manager.py  metadata_store.py  models.py  project_store.py  settings.py  simulation_service.py  utils.py
services/engine/geologic_wizard_engine/modules/: __init__.py  pygplates_adapter.py  render_payload.py  tectonic_backends.py  tectonics.py  terrain_synthesis.py  validation.py
services/engine/geologic_wizard_engine/modules/tectonics_v2/: __init__.py  boundary_machine.py  engine.py  events.py  force_solver.py  lifecycle.py  state.py  supercontinent.py
services/engine/tests/: test_api_flow.py  test_render_payload.py  test_simulation.py  test_tectonics_v2.py
skills/earthlike-tectonics-science/: SKILL.md
skills/earthlike-tectonics-science/agents/: openai.yaml
skills/earthlike-tectonics-science/references/: plausibility-checks.md  process-primer.md  quantitative-ranges.md  source-canon.md  worldbuilding-pasta-crosswalk.md
skills/pygplates-fiction-worldbuilder/: SKILL.md
skills/pygplates-fiction-worldbuilder/agents/: openai.yaml
(+5 files in other folders)
